[package]
name = "clamp"
version = "0.1.0"
edition = "2024"
authors = ["Kristóf Kovács", "Ifa <kristof@mntr.dev>"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
regex = "1.10"
hex = "0.4"
anyhow = "1.0"

[[bin]]
name = "clamp"
path = "src/main.rs"

[lib]
name = "clamp_lib"
path = "src/lib.rs"
